@@ -1,3 +1,10 @@
+2004-03-27  Douglas Bates  <bates@bates2_home>
+
+	* src/ssclme.c (ssclme_transfer_dimnames): Add new function to
+	store the dimnames in the XtX and bVar slots
+	(ssclme_update_mm): Change the dimensions of the bVar slot
+	components and the returned value from ssclme_ranef.
+
 2004-03-18  Douglas Bates  <bates@stat.wisc.edu>
 
 	* R/{pdMat.R,pdIdent.R,pdLogChol.R,pdMatrixLog.R,pdNatural.R},
